--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
+    "gatsby-plugin-sass": "^5.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-source-filesystem": "^4.2.0",
     "react": "^17.0.1",
