--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bulma": "^0.9.3",
     "dayjs": "^1.10.7",
     "gatsby": "^4.2.0",
+    "gatsby-plugin-google-analytics": "^4.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
