--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "gatsby-source-filesystem": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
