--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "aoirint-com",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "description": "Personal Website",
   "keywords": [
     "gatsby"
