--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "dayjs": "^1.11.6",
     "gatsby": "^5.0.1",
     "gatsby-plugin-google-analytics": "^5.0.0",
+    "gatsby-plugin-image": "^3.2.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-mdx": "^5.0.0",
     "gatsby-plugin-react-helmet": "^6.0.0",
     "gatsby-plugin-sass": "^6.0.0",
+    "gatsby-plugin-sharp": "^5.2.0",
     "gatsby-plugin-sitemap": "^6.0.0",
-    "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-source-filesystem": "^5.2.0",
+    "gatsby-transformer-sharp": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
